Hover Effect to Image

--- a/src/index.css
+++ b/src/index.css
@@ -132,3 +132,16 @@ body::-webkit-scrollbar {
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
 }
+
+/* Hover for image */
+
+.hover-image {
+  width: 100%; 
+  transition: transform 0.3s ease, opacity 0.3s ease; 
+}
+
+.hover-image:hover {
+  transform: scale(1.1); 
+  opacity: 0.8; 
+  cursor: pointer;
+}
